# YOLO_V1

./: .dvcignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml  requirements-annotation.txt  requirements-smolvlm.txt  requirements.txt  run_workflow.sh  task.md  tree.txt
.dvc/: config
.github/workflows/: ci.yml
configs/: annotation.yaml  capture_config.yaml  class_thresholds.yaml  data.yaml  dataset_sources.yaml  dataset_split_config.yaml  eval_data.yaml  feature_flags.yaml  release.yaml  risk_rules.yaml  tts_config.yaml
configs/deployment/: onnx_config.yaml  tflite_config.yaml
configs/training/: yolo11n_config.yaml  yolo11s_config.yaml
data/: .gitignore  DATASET_CHANGELOG.md
data/annotation/: .gitignore  verification_ledger.json
data/consent/: README.md
data/processed/: .gitignore
data/qa_reports/: annotation_qa_report.json  annotation_qa_report.md  completeness_report.json  coverage_report.json  dataset_quality_report.json  full_build_preflight.csv  full_build_preflight.json  full_build_preflight.md  phase5_validation_report.json
data/qa_reports/phase4_mitigation/: benchmark_report.csv  benchmark_report.json  (+9 more)
data/raw/: .gitignore
docs/: README.md
docs/01_executive_implementation_plan/: README.md  SUMMARY.md  appendix_links.md  architecture_overview.md  business_goals.md  dataset_governance.md  engineering_standards.md  implementation_phases.md  product_vision.md  project_scope.md  recommendations.md  risk_register.md  roadmap.md  security_privacy.md  validation_strategy.md
docs/02_technical_architecture_specification/: README.md  api_contracts.md  architecture_decisions.md  confidence_fusion.md  data_contracts.md  data_flow.md  deployment_architecture.md  error_handling.md  event_memory.md  feature_flags.md  interfaces.md  orchestrator.md  performance_budget.md  plugin_architecture.md  rule_engine.md  structured_logging.md  system_architecture.md  threading_model.md
docs/03_engineering_appendix/: README.md  annotation_guide.md  api_reference.md  consent_form_template.md  dataset_templates.md  dvc_pipeline.md  future_modules.md  python_examples.md  qa_pipeline.md  release_checklists.md  sample_logs.md  training_scripts.md  troubleshooting.md  yaml_examples.md
docs/04_dataset_engineering/: README.md  capture_annotation_runbook.md  phase3_engineering_report.md  reproduction_log.md
docs/05_audit/: annotation_v2_realization_runbook.md  dataset_v1_readiness_review.md  dataset_v1_realization_results.md  p2_merge_attrition_analysis.md  pre_phase4_production_readiness_audit.md
docs/06_training_engineering/: README.md  masked_loss_architecture.md  mitigation_runbook.md  phase4_engineering_report.md
docs/07_dataset_production/: README.md  auto_annotation_runbook.md  phase5_milestone_status.md  release_runbook.md  verification_runbook.md
scripts/dataset/: 01_download_coco_subset.py  02_download_openimages_subset.py  03_download_roboflow_datasets.py  04_download_wider_face.py  05_remap_classes.py  06_collect_negatives.py  07_merge_datasets.py  08_ingest_capture_session.py  09_import_annotations.py  10_capture_progress.py  11_generate_completeness.py  12_auto_annotate.py  13_build_verification_batches.py  14_import_verified_batch.py  15_apply_verified_labels.py  16_coverage_report.py  17_dataset_quality_report.py  18_make_release.py  19_quality_delta_report.py  20_ingest_local_zips.py  __init__.py  dataset_stats.py  generate_splits.py  split_dataset.py
scripts/inference/: __init__.py  test_video.py
scripts/qa/: __init__.py  annotation_gt_eval.py  check_annotations.py  full_build_preflight.py  run_full_qa.py  validate_phase5.py
scripts/training/: __init__.py  benchmark_mitigation.py  evaluate_mitigation.py  evaluate_model.py  preflight_check.py  train_yolo.py  validate_masking.py
scripts/utils/: __init__.py  scaffold_dirs.ps1
src/: __init__.py
src/config/: __init__.py  config_loader.py
src/dataset/: __init__.py  completeness.py  completeness_policies.py  cross_dataset_salvage.py  dedup.py  filters.py  manifest.py  merge.py  negatives.py  remap.py  sources_config.py  split_config.py
src/logging/: __init__.py  structured_logger.py
src/pipeline/: __init__.py  alert_queue.py  confidence_fusion.py  detector.py  event_memory.py  orchestrator.py  plugin_base.py  rule_engine.py  scene_analyzer.py  tts_engine.py
src/plugins/: __init__.py
src/training/: __init__.py  _masked_loss_impl.py  benchmark.py  completeness_lookup.py  evaluation.py  masked_loss.py  mitigation_config.py  preflight.py  trainer.py
src/utils/: __init__.py  annotation_utils.py  config_helpers.py  dataset_utils.py  image_utils.py  report_utils.py
tests/: conftest.py
tests/integration/: conftest.py  test_annotation_roundtrip.py  test_capture_workflow.py  test_dataset_pipeline.py  test_mitigation_pipeline.py  test_release_flow.py
tests/performance/: conftest.py  test_coverage_budget.py  test_dedup_budget.py
tests/system/: conftest.py  test_phase5_smoke_pipeline.py  test_training_smoke.py
tests/unit/: annotation_fakes.py  conftest.py  test_annotation_refine.py  test_annotation_registry.py  test_annotation_targeting.py  test_annotation_utils.py  test_apply_verified_labels.py  test_auto_annotate_cli.py  test_candidate_artifact.py  test_capture_agreement.py  test_capture_annotations.py  test_capture_config.py  test_capture_exif.py  test_capture_ingest.py  test_capture_progress.py  test_completeness_generation.py  test_completeness_policies.py  test_config_loader.py  test_consent.py  test_coverage_report.py  test_cross_dataset_backend.py  test_cross_dataset_salvage.py  test_cvat_package.py  test_dataset_utils.py  test_dedup_filters.py  test_dedup_vectorized.py  test_downloaders.py  test_downloaders_full_mode.py  test_downloaders_parsers.py  test_evaluate_model.py  test_fiftyone_review.py  test_full_build_preflight.py  test_grounding_dino_backend.py  test_gt_eval.py  test_image_utils.py  test_import_annotations_cli.py  test_inference_pipeline.py  test_manifest.py  test_masked_loss.py  test_masked_trainer.py  (+26 more)
(+67 files in other folders)
